add query claim by claimId
